fixed spacing between cells.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 table {
-	width: 650px;
+	width: 660px;
 	height: 650px;
 	border: 3px solid black;
 	margin: 0 auto;
@@ -27,6 +27,7 @@ td {
 	color: black;
 	font-size: 30px;
 	line-height: 200px;
+	margin: 0 3px;
 }
 
 .xBlocks {
